fixed the ui layout bug

--- a/style.css
+++ b/style.css
@@ -11,3 +11,6 @@ body{
 .controls{
     float: right;
 }
+.editor{
+    float: right;
+}
